--- a/devops/sql.html
+++ b/devops/sql.html
@@ -626,7 +626,7 @@ ORDER BY
                 <h2>w3schools</h2>
                 <p>W3Schools es una excelente plataforma educativa en línea que ofrece tutoriales y recursos para aprender SQL. A través de W3Schools puedes aprender desde conceptos básicos, como crear tablas y realizar consultas sencillas, hasta conceptos más avanzados, como trabajar con funciones, vistas, y transacciones. Una de las ventajas de W3Schools es que proporciona un editor en línea donde puedes practicar las consultas SQL directamente desde tu navegador sin necesidad de configurar una base de datos en tu equipo.</p>
                 <p>Al usar W3Schools, puedes explorar las funciones de SQL en su sección de "SQL Functions". Cada función está explicada con ejemplos claros y fáciles de seguir, lo que permite ver cómo funciona en la práctica. Esto es especialmente útil si estás comenzando a aprender SQL y quieres ver cómo diferentes funciones pueden aplicarse a tus propios datos o a proyectos más grandes. Además, W3Schools ofrece pequeñas pruebas interactivas para consolidar lo aprendido.</p>
-                <p>Puedes consultar las funciones de SQL, así como aprender sobre el lenguaje en <a href="https://www.w3schools.com/sql/sql_alias.asp" target="blank">W3Schools</a>.</p>
+                <p>Puedes consultar las funciones de SQL, así como aprender sobre el lenguaje en <a href="https://www.w3schools.com/sql/" target="blank">W3Schools</a>.</p>
                 <div class="blog-image">
                     <img src="media/sql9.jpg" alt="">
                 </div>
