--- a/network/static.html
+++ b/network/static.html
@@ -425,15 +425,14 @@ ip route 10.0.2.0 255.255.255.252 10.0.4.2 10   # AD más bajo, más prioridad</
                 </div>
                 <h2>Parámetros importantes</h2>
                 <ol>
-                    <li>Balanceo de carga</li>
+                    <li><marcador class="resaltado9">Balanceo de carga</marcador></li>
                     <p>El balanceo de carga es una técnica que permite distribuir el tráfico de red de manera equitativa entre diferentes rutas. Esto puede mejorar la eficiencia y redundancia en la red.</p>
                     <ul>
                         <li>Balanceo por igual costo: Si hay dos rutas con el mismo costo (número de saltos o métrico), el tráfico se puede dividir equitativamente entre ellas.</li>
                     </ul>
-                    <li>Calidad de Servicio (QoS)</li>
+                    <li><marcador class="resaltado9">Calidad de Servicio (QoS)</marcador></li>
                     <p>La QoS permite priorizar ciertos tipos de tráfico, como voz sobre IP (VoIP) o video, garantizando que estos tengan un ancho de banda adecuado y baja latencia. Al configurar rutas, es esencial tener en cuenta la QoS para asegurar que las aplicaciones críticas no sufran interrupciones.</p>
-
-                    <li>Tipos de tráfico</li>
+                    <li><marcador class="resaltado9">Tipos de tráfico</marcador></li>
                     <p>El tráfico en una red puede incluir datos de aplicaciones, llamadas telefónicas (VoIP), transmisión de medios (streaming de video/audio), y datos empresariales críticos. Cada tipo de tráfico puede tener diferentes requisitos de ancho de banda, latencia y fiabilidad.</p>
                 </ol>
                 <div class="blog-image-grande">
