--- a/hacking/firewall.html
+++ b/hacking/firewall.html
@@ -96,6 +96,15 @@ next
 end</code></pre>
                         </div>
                     </div>
+                    <div class="contenedor">
+                        <div class="etiqueta">
+                            Puedes utilizar el comando <marcador class="subrayado">show</marcador> para mostrar los detalles de los objetos de dirección en tu firewall:
+                        </div>
+                        <div class="comandos">
+                          <input type="text" class="text" value="show firewall address &quot;servidor_interno&quot;" oninput="ajustarAncho(this)">
+                          <button><i class="fa fa-clone"></i><span> Copy</span></button>
+                        </div>
+                    </div>
                     <li><marcador class="resaltado2">Objetos de Servicio (Service Objects): </marcador>Representan servicios de red como HTTP, HTTPS, FTP, SSH, entre otros. Un objeto de servicio define el puerto y el protocolo (TCP/UDP/ICMP) para una política específica. Puedes crear servicios personalizados si necesitas algo que no esté predefinido.</li>
                     <h6>Ejemplo de creación de servicio personalizado:</h6>
                     <div class="consola">
